# studying_rust

activites/: Cargo.toml
projects/p1/: Cargo.toml  estrutura_tabelas.txt  funcionalidates.txt
projects/p1/src/: database.rs  main.rs  user_interface.rs
projects/p1/src/database/: files.rs  operations.rs  parse_filter.rs  tables.rs
projects/p1/src/user_interface/: cli.rs  old.rs  parse_filter.rs
tests/: Cargo.toml
tests/src/: main.rs
