[package]
name = "p1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
home = { version = "*" }
polars = { version = "*", features = ["lazy", "is_in", "sql"] }
regex = { version = "*" }
mimalloc = { version = "*", default-features = false }
chrono = { version = "*" }
